# pico-weather-epaper

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x
docs/: ui-redesign-plan.md
scripts/: gen_korean_font.py
src/: config.rs.example  display.rs  icons.rs  korean_font.rs  main.rs  menu.rs  ntp.rs  settings.rs  touch.rs  weather.rs  wifi.rs
