[package]
name = "rasp-pico-w-e-paper-2-9"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embassy core
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9", features = ["defmt", "time-driver", "critical-section-impl", "rp2040", "binary-info"] }

# Networking
embassy-net = { version = "0.8", features = ["defmt", "tcp", "udp", "dns", "dhcpv4"] }

# CYW43 WiFi
cyw43 = { version = "0.6", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9", features = ["defmt"] }

# Cortex-M
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Display & Graphics
embedded-graphics = "0.8"
embedded-hal = "1"
embedded-io-async = "0.7"
profont = "0.7"

# JSON parsing
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

# Async combinators
embassy-futures = "0.1"

# Utilities
heapless = "0.8"
static_cell = "2.1"
portable-atomic = { version = "1", features = ["critical-section"] }

# Logging
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0
